<resources xmlns:android="http://schemas.android.com/apk/res/com.chanapps.four.activity">
    <string name="app_name">Chanu</string>
    <string name="app_name_title">Chanu</string>
    <string name="app_name_home">Go to Chanu</string>
    <string name="application_name">Chanu</string>
    <string name="application_tagname">4chan Reloaded</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="fragment_layout">2 Pane Layout</string>
    <string name="thread_activity">Thread</string>
    <string name="board_activity">Board</string>
    <string name="title_photogrid_activity">PhotoGrid</string>
    <string name="full_screen_image_activity">View Image</string>
    <string name="post_reply_activity">Post Reply</string>
    <string name="post_reply_share_activity">Chanu</string>
    <string name="settings_activity">Settings</string>
    <string name="purchase_activity">Purchase</string>
    <string name="about_activity">About</string>
    <string name="board_image">Board Image</string>
    <string name="thread_post_image">Thread Image</string>
    <string name="thread_post_image_expanded">Expanded Thread Image</string>
    <string name="thread_post_reply_button">Reply</string>
    <string name="thread_post_expand_button">Expand</string>
    <string name="thread_post_collapse_button">Collapse</string>
    <string name="thread_country_flag">Country Flag</string>
    <string name="not_implemented">Not yet implemented</string>
    <string name="thread_related_threads_title">Related Threads</string>
    <string name="thread_related_threads_desc">Threads on /%1$s/ covering a similar topic</string>
    <string name="board_search">Search</string>
    <string name="thread_search">Search</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter text</string>
    <string name="search_results_title">Search Results</string>
    <string name="board_search_results">Threads matching \"%1$s\"</string>
    <string name="board_search_no_results">No threads matching \"%1$s\"</string>
    <string name="thread_search_results">Posts matching \"%1$s\"</string>
    <string name="thread_search_no_results">No posts matching \"%1$s\"</string>
    <string name="board_related_boards_title">Related Boards</string>
    <string name="board_related_boards_desc">Boards having similar topics to /%1$s/</string>
    <string name="blocklist_button">Block Posts With Id</string>
    <string name="blocklist_title">Blocklist</string>
    <string name="blocklist_title_with_type">%1$s Blocklist</string>
    <string name="blocklist_title_remove">Select to remove from blocklist</string>
    <string name="blocklist_message">Select to remove from blocklist</string>
    <string name="blocklist_message_empty">Your blocklist is empty</string>
    <string name="blocklist_removed_id">Removed %1$s from blocklist</string>
    <string name="blocklist_add_id_confirm">Add %1$s%2$s %3$s to blocklist?</string>
    <string name="blocklist_remove_id_confirm">Remove %1$s%2$s %3$s from blocklist?</string>
    <string name="blocklist_select_view_type">Select Block Type</string>
    <string name="blocklist_select_type">Select Block Type</string>
    <string name="blocklist_no_types_found">No blockable tripcode, name, email or id found</string>
    <string name="blocklist_empty">Blocklist is empty, visit threads to select tripcode, name, email or id to block</string>
    <string name="delete_button">Delete Post</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="delete_post_title_confirm">Password for Delete</string>
    <string name="delete_post_password_hint">Password for Post</string>
    <string name="delete_post_enter_password">Enter a password to delete</string>
    <string name="delete_post_deleting">Deleting Post...</string>
    <string name="delete_post_deleting_image">Deleting Post Image...</string>
    <string name="delete_post_error">Couldn\'t delete post</string>
    <string name="delete_post_no_response">Couldn\'t delete post, no response</string>
    <string name="delete_post_cancelled">Cancelled delete post</string>
    <string name="delete_post_successful">Deleted post</string>
    <string name="delete_post_successful_image">Deleted post image</string>
    <string name="delete_post_response_error">Couldn\'t delete post, unknown response</string>
    <string name="delete_post_only_image">Delete Only Image?</string>
    <string name="connect_to_billing_title">Purchase</string>
    <string name="connect_to_billing_msg">Connecting to Google Play...</string>
    <string name="purchase_error">Couldn\'t purchase, try again later</string>
    <string name="purchase_success">Ads are now disabled</string>
    <string name="consume_success">Consume success!</string>
    <string name="thread_popup_title">Post %1$d</string>
    <string name="thread_popup_reply">Reply</string>
    <string name="thread_popup_goto">Goto</string>
    <string name="dialog_color_picker_title">Pick a Color</string>
    <string name="report_button">Report Post</string>
    <string name="report_post_title">Report Post</string>
    <string name="report_post_title_type">Reason for report</string>
    <string name="report_post">Report</string>
    <string name="report_post_select_type">Select a report type</string>
    <string name="report_post_reporting">Reporting...</string>
    <string name="report_post_successful">Reported post</string>
    <string name="report_post_cancelled">Cancelled report post</string>
    <string name="report_post_error">Couldn\'t report post</string>
    <string name="report_post_no_response">Couldn\'t report post, no response</string>
    <string name="report_post_bug_warning">Due to a 4chan limitation, only post %1$s will be reported</string>
    <string name="authorize_pass_successful">Authorized</string>
    <string name="authorize_pass_cancelled">Cancelled authorization</string>
    <string name="authorize_pass_error">Couldn\'t authorize</string>
    <string name="authorize_pass_no_response">Couldn\'t authorize, no response</string>
    <string name="logout_pass_successful">Pass logout successful</string>
    <string name="logout_pass_cancelled">Cancelled pass logout</string>
    <string name="logout_pass_error">Couldn\'t logout</string>
    <string name="logout_pass_no_response">Couldn\'t logout, no response</string>
    <string name="web_image_title">Attach Image from Web</string>
    <string name="web_image_search_title">Search Web for Image</string>
    <string name="web_image_url_text_hint">Image Url</string>
    <string name="web_image_search_text_hint">search text</string>
    <string name="web_image_key_download">Load</string>
    <string name="web_image_key_search">Search</string>
    <string name="web_image_button_download">Download</string>
    <string name="web_image_button_browse">Browse for image</string>
    <string name="web_image_button_search">Search</string>
    <string name="web_image_button_attach">Attach</string>
    <string name="web_image_input_url_first">Enter url to download image</string>
    <string name="direct_web_menu">View on 4chan.org</string>
    <string name="settings_menu">Settings</string>
    <string name="global_rules_menu">Global rules</string>
    <string name="board_rules_menu">Board rules</string>
    <string name="play_thread_menu">Play thread</string>
    <string name="refresh_board_menu">Refresh</string>
    <string name="refresh_thread_menu">Refresh</string>
    <string name="new_thread_menu">New thread</string>
    <string name="board_add_to_favorites_menu">Add to favorites</string>
    <string name="favorites_remove_board_menu">Remove from favorites</string>
    <string name="view_as_list_menu">View as list</string>
    <string name="thread_image_popup_menu">Thread images</string>
    <string name="thread_reply_menu">Reply to thread</string>
    <string name="post_reply_all_menu">Reply</string>
    <string name="post_reply_all_quote_menu">Quoted reply</string>
    <string name="copy_text_menu">Copy post text</string>
    <string name="delete_report_posts_menu">Delete/report posts</string>
    <string name="delete_posts_menu">Delete post</string>
    <string name="report_posts_menu">Report post</string>
    <string name="share_image">Share</string>
    <string name="prev_image_menu">Prev image</string>
    <string name="next_image_menu">Next image</string>
    <string name="download_images_to_gallery_menu">Download image</string>
    <string name="download_image_menu">Save to gallery</string>
    <string name="set_as_wallpaper_menu">Set as wallpaper</string>
    <string name="view_image_gallery_menu">Thread gallery</string>
    <string name="image_search_menu">Tineye image search</string>
    <string name="anime_image_search_menu">IQDB image search</string>
    <string name="share_image_menu">Share image</string>
    <string name="offline_board_view_menu">Board gallery</string>
    <string name="translate">Translate post</string>
    <string name="thread_replies">Replies</string>
    <string name="thread_info">Thread Info</string>
    <string name="dialog_authorize">Authorize</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="post_reply_web_menu">Add web image</string>
    <string name="post_reply_picture_menu">Add gallery image</string>
    <string name="post_reply_pass_enable_menu">Authorize 4chan pass</string>
    <string name="post_reply_pass_disable_menu">Logout 4chan pass</string>
    <string name="pref_pass_category">4chan Pass</string>
    <string name="pref_pass_category_summ">Token and PIN to bypass captcha</string>
    <string name="pref_pass_token">Token</string>
    <string name="pref_pass_token_hint">Enter Token</string>
    <string name="pref_pass_token_summ">Your 10-character 4chan pass token</string>
    <string name="pref_pass_pin">PIN</string>
    <string name="pref_pass_pin_hint">Enter PIN</string>
    <string name="pref_pass_pin_summ">Your 6-character 4chan pass PIN</string>
    <string name="pref_about_application_category">Application</string>
    <string name="pref_about_application_version">Version %1$s</string>
    <string name="pref_about_application_version_sum">Released %1$s</string>
    <string name="pref_about_application_rate">Rate Us</string>
    <string name="pref_about_application_rate_sum">Rate Chanu on Google Play</string>
    <string name="pref_about_application_gplus">Visit Us</string>
    <string name="pref_about_application_gplus_sum">Join the Chanu community on Google Plus</string>
    <string name="pref_about_data_category">Uses</string>
    <string name="pref_about_data_4chan">4chan API</string>
    <string name="pref_about_data_4chan_sum">Data sourced live via the 4chan API</string>
    <string name="pref_about_data_uil">Universal Image Loader</string>
    <string name="pref_about_data_uil_sum">Courtesy of Sergey Tarasevich</string>
    <string name="pref_about_data_pulltorefresh">ActionBar-PullToRefresh</string>
    <string name="pref_about_data_pulltorefresh_sum">Courtesy of Chris Banes</string>
    <string name="pref_about_data_color">mColorPicker</string>
    <string name="pref_about_data_color_sum">Courtesy of Daniel Nilsson</string>
    <string name="pref_about_developer_category">Purchase Info</string>
    <string name="pref_about_store_chanapps">Chanapps Store</string>
    <string name="pref_about_store_chanapps_sum">Buy a Chanu T-shirt</string>
    <string name="pref_about_contact_us">Contact Us</string>
    <string name="pref_about_translations_category">Translations</string>
    <string name="pref_about_translations_de">German</string>
    <string name="send_feedback_menu">Send Feedback</string>
    <string name="purchase_menu">Purchase</string>
    <string name="about_menu">About</string>
    <string name="board_select">Select Board</string>
    <string name="sort_order_menu">Sort order</string>
</resources>