<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:chanapps="http://schemas.android.com/apk/res/com.chanapps.four.activity">

    <!-- posting -->

    <com.chanapps.four.component.IconPreferenceScreen
            android:key="pref_about_icon"
            android:summary=""
            android:title=""
            chanapps:icon="@drawable/app_icon_with_text" />

    <!--
    <Preference
            android:key="pref_about_title"
            android:title="@string/pref_about_title"
            android:summary="@string/pref_about_title_sum"
            />
    -->


    <PreferenceCategory
            android:key="pref_about_application_category"
            android:persistent="true"
            android:title="@string/pref_about_application_category">

        <Preference
                android:key="pref_about_application_version"
                android:summary="@string/pref_about_application_version_sum"
                android:title="@string/pref_about_application_version" />

        <Preference
                android:key="pref_about_application_rate"
                android:summary="@string/pref_about_application_rate_sum"
                android:title="@string/pref_about_application_rate" />

        <Preference
                android:key="pref_about_application_gplus"
                android:summary="@string/pref_about_application_gplus_sum"
                android:title="@string/pref_about_application_gplus" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="pref_about_developer_category"
            android:persistent="true"
            android:title="@string/pref_about_developer_category">

        <Preference
                android:key="pref_about_store_chanapps"
                android:summary="@string/pref_about_store_chanapps_sum"
                android:title="@string/pref_about_store_chanapps" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="pref_about_data_category"
            android:persistent="true"
            android:title="@string/pref_about_data_category">

        <Preference
                android:key="pref_about_data_4chan"
                android:summary="@string/pref_about_data_4chan_sum"
                android:title="@string/pref_about_data_4chan" />

        <Preference
                android:key="pref_about_data_uil"
                android:summary="@string/pref_about_data_uil_sum"
                android:title="@string/pref_about_data_uil" />

        <Preference
                android:key="pref_about_data_pulltorefresh"
                android:summary="@string/pref_about_data_pulltorefresh_sum"
                android:title="@string/pref_about_data_pulltorefresh" />

        <Preference
                android:key="pref_about_data_color"
                android:summary="@string/pref_about_data_color_sum"
                android:title="@string/pref_about_data_color" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="pref_about_translations_category"
            android:persistent="true"
            android:title="@string/pref_about_translations_category">

        <Preference
                android:key="pref_about_translations_de"
                android:summary="@string/pref_about_translations_de_sum"
                android:title="@string/pref_about_translations_de" />

    </PreferenceCategory>

</PreferenceScreen>