<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="pref_pass_category"
            android:title="@string/pref_pass_category"
            android:summary="@string/pref_pass_category_summ">

        <EditTextPreference
                android:key="pref_pass_token"
                android:title="@string/pref_pass_token"
                android:hint="@string/pref_pass_token_hint"
                android:inputType="text|textCapCharacters|textNoSuggestions"
                android:summary="@string/pref_pass_token_summ"
                android:maxLength="10"
                />

        <EditTextPreference
                android:key="pref_pass_pin"
                android:title="@string/pref_pass_pin"
                android:hint="@string/pref_pass_pin_hint"
                android:summary="@string/pref_pass_pin_summ"
                android:inputType="textVisiblePassword|numberPassword"
                android:maxLength="6"
                />
<!--
        <CheckBoxPreference
                android:key="pref_pass_enabled"
                android:title="@string/pref_pass_enabled"
                android:summaryOn="@string/pref_pass_enabled_summ_on"
                android:summaryOff="@string/pref_pass_enabled_summ_off"
                android:defaultValue="false" />
-->
        <Preference
                android:key="pref_pass_auth_button"
                android:title="@string/dialog_authorize"/>

        <Preference
                android:key="pref_pass_close_button"
                android:title="@string/dialog_cancel"/>

    </PreferenceCategory>

</PreferenceScreen>