<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/prev_image_menu"
          android:title="@string/prev_image_menu"
          android:icon="@drawable/navigation_previous_item"
          android:enabled="false"
          android:showAsAction="always"
            />
    <item android:id="@+id/next_image_menu"
          android:title="@string/next_image_menu"
          android:icon="@drawable/navigation_next_item"
          android:enabled="false"
          android:showAsAction="always"
            />
    <item android:id="@+id/download_image_menu"
          android:title="@string/download_image_menu"
          android:icon="@drawable/content_save"
            />
    <item android:id="@+id/share_image_menu"
          android:title="@string/share_image_menu"
          android:icon="@drawable/social_share"
            />
    <item android:id="@+id/set_as_wallpaper_menu"
          android:title="@string/set_as_wallpaper_menu"
          android:icon="@drawable/content_picture"
            />
    <item android:id="@+id/view_image_gallery_menu"
          android:title="@string/view_image_gallery_menu"
          android:icon="@drawable/collections_view_as_grid"
            />
    <item android:id="@+id/settings_menu"
          android:title="@string/settings_menu"
          android:icon="@drawable/action_settings"
            />
    <item android:id="@+id/help_menu"
          android:title="@string/help_menu"
          android:icon="@drawable/action_help"
          />
    <item android:id="@+id/about_menu"
          android:title="@string/about_menu"
          android:icon="@drawable/action_help"
            />
</menu>
