<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/download_image_menu"
          android:title="@string/download_image_menu"
          android:icon="@drawable/content_save"
            />
    <item android:id="@+id/share_image_menu"
          android:title="@string/share_image_menu"
          android:icon="@drawable/social_share"
            />
    <item android:id="@+id/set_as_wallpaper_menu"
          android:title="@string/set_as_wallpaper_menu"
          android:icon="@drawable/content_picture"
            />
    <item android:id="@+id/view_image_gallery_menu"
          android:title="@string/view_image_gallery_menu"
          android:icon="@drawable/collections_view_as_grid"
            />
    <item android:id="@+id/image_search_menu"
          android:title="@string/image_search_menu"
          android:icon="@drawable/action_search"
            />
    <item android:id="@+id/anime_image_search_menu"
          android:title="@string/anime_image_search_menu"
          android:icon="@drawable/action_search"
            />
</menu>
