<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/board_jump_spinner_menu"
          android:title="@string/board_select"
          android:icon="@drawable/collections_view_as_list"
          android:actionDropDownStyle="@style/BoardJumpDropDown"
          android:actionLayout="@layout/board_jump_spinner_nsfw_long"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/search_menu"
          android:title="@string/thread_search"
          android:icon="@drawable/action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/refresh_menu"
          android:title="@string/refresh_board_menu"
          android:icon="@drawable/navigation_refresh"
            />
    <item android:id="@+id/toggle_view_type_menu"
          android:title="@string/view_as_list_menu"
          android:icon="@drawable/collections_view_as_list"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/new_thread_menu"
          android:title="@string/new_thread_menu"
          android:icon="@drawable/content_new"
            />
    <item android:id="@+id/offline_board_view_menu"
          android:title="@string/offline_board_view_menu"
          android:icon="@drawable/device_access_storage"
            />
    <item android:id="@+id/board_rules_menu"
          android:title="@string/board_rules_menu"
          android:icon="@drawable/action_help"
            />
    <item android:id="@+id/settings_menu"
          android:title="@string/settings_menu"
          android:icon="@drawable/action_settings"
            />
    <item android:id="@+id/exit_menu"
          android:title="@string/exit_menu"
          android:icon="@drawable/navigation_cancel"
            />
</menu>
