<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/sort_order_menu"
          android:title="@string/sort_order_menu"
          android:icon="@drawable/collections_sort_by_size"
            />

    <item android:id="@+id/board_add_to_favorites_menu"
          android:title="@string/board_add_to_favorites_menu"
          android:icon="@drawable/content_new"
          android:visible="false"
            />
    <item android:id="@+id/favorites_remove_board_menu"
          android:title="@string/favorites_remove_board_menu"
          android:icon="@drawable/rating_important"
          android:visible="false"
            />

    <item android:id="@+id/board_rules_menu"
          android:title="@string/board_rules_menu"
          android:icon="@drawable/action_help"
            />

    <item android:id="@+id/offline_board_view_menu"
          android:title="@string/offline_board_view_menu"
          android:icon="@drawable/device_access_storage"
            />

    <item android:id="@+id/web_menu"
          android:title="@string/direct_web_menu"
          android:icon="@drawable/location_web_site"
            />

</menu>
