<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/global_rules_menu"
          android:title="@string/global_rules_menu"
          android:icon="@drawable/action_about"
          android:visible="false"
            />
    <item android:id="@+id/web_menu"
          android:title="@string/direct_web_menu"
          android:icon="@drawable/location_web_site"
            />
    <item android:id="@+id/send_feedback_menu"
          android:title="@string/send_feedback_menu"
          android:icon="@drawable/action_help"
            />
    <item android:id="@+id/purchase_menu"
          android:title="@string/purchase_menu"
          android:icon="@drawable/device_access_new_account"
            />
    <item android:id="@+id/about_menu"
          android:title="@string/about_activity"
          android:icon="@drawable/action_about"
            />
</menu>
