<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/thread_context_reply_popup_button_menu"
          android:title="@string/post_reply_all_menu"
          android:icon="@drawable/social_reply"
            />

    <item android:id="@+id/thread_context_replies_popup_button_menu"
          android:title="@string/thread_replies"
          android:icon="@drawable/social_chat"
            />

    <item android:id="@+id/thread_context_info_popup_button_menu"
          android:title="@string/thread_info"
          android:icon="@drawable/social_forward"
          />

    <item android:id="@+id/thread_context_delete_report_popup_button_menu"
          android:title="@string/delete_report_posts_menu"
          android:icon="@drawable/content_remove"
          />

    <item android:id="@+id/thread_context_share_action_menu"
          android:icon="@drawable/ic_menu_share_holo_light"
          android:title="@string/share_image"
          android:enabled="true"
          android:actionProviderClass="android.widget.ShareActionProvider"
          android:showAsAction="ifRoom" />

</menu>
