<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/board_jump_spinner_menu"
          android:title="@string/board_select"
          android:icon="@drawable/collections_view_as_list"
          android:actionDropDownStyle="@style/BoardJumpDropDown"
          android:actionLayout="@layout/board_jump_spinner_nsfw"
          android:showAsAction="ifRoom"
            />
    <item android:id="@+id/refresh_menu"
          android:title="@string/refresh_thread_menu"
          android:icon="@drawable/navigation_refresh"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/thread_reply_popup_button_menu"
          android:title="@string/thread_reply_menu"
          android:icon="@drawable/social_reply"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/thread_image_popup_button_menu"
          android:title="@string/thread_image_popup_menu"
          android:icon="@drawable/content_picture"
          android:showAsAction="ifRoom"
          />

    <item android:id="@+id/play_thread_menu"
          android:title="@string/play_thread_menu"
          android:icon="@drawable/av_play"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/settings_menu"
          android:title="@string/settings_menu"
          android:icon="@drawable/action_settings"
            />
    <item android:id="@+id/help_menu"
          android:title="@string/help_menu"
          android:icon="@drawable/action_help"
          />
    <item android:id="@+id/exit_menu"
          android:title="@string/exit_menu"
          android:icon="@drawable/navigation_cancel"
            />
</menu>
