<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            style="@style/PostReplyEditTextStyle"
            android:padding="0dp"
            android:layout_marginTop="16dp"
            android:textSize="18dp"
            android:text="@string/delete_post_title_confirm"
            >
    </TextView>

    <EditText
            android:id="@+id/delete_post_password"
            android:hint="@string/delete_post_password_hint"
            android:inputType="textVisiblePassword|numberPassword"
            style="@style/PostReplyEditTextStyle"
            android:imeOptions="actionNone"
            android:maxLength="8"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            >
    </EditText>

    <CheckBox
            android:id="@+id/delete_post_only_image_checkbox"
            style="@style/PostReplyCheckboxStyle"
            android:text="@string/delete_post_only_image" />

</LinearLayout>